# Atividade-1

./: README.md  app.py  pyproject.toml
Api-aluno/: README.md  app.py  requirements.txt
