[tool.poetry]
name = "api-aluno"
version = "0.1.0"
description = "API simples para atividade"
authors = ["Roberto Pereira de Sousa <otaltorob@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.3.3"
gunicorn = "^21.2.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"